syntax = "proto3";

service DIDASchedulerService {
  rpc SendAppData (SendAppDataRequest) returns (SendAppDataReply);
  rpc SendWorkers (SendWorkersRequest) returns (SendWorkersReply);
}

message SendAppDataRequest {
	string input = 1;
	repeated string app = 2;
}

message SendAppDataReply {
	bool ack = 1;
}

message SendWorkersRequest {
	repeated string url = 1;
}

message SendWorkersReply {
	bool ack = 1;
}